--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ yes'><!--[if gte vml 1]><v:shapetype id="_x0000_t75" coordsize="21600,21600"
  style='width:226.5pt;height:225pt;visibility:visible;mso-wrap-style:square'>
  <v:imagedata src="index_files/image001.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img width=302 height=300
-src="index_files/image002.gif" v:shapes="Picture_x0020_9"><![endif]></span></b></p>
+src="image001.jpg" v:shapes="Picture_x0020_9"><![endif]></span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0cm;text-align:center;
 line-height:24.4pt;background:white'><b><span style='font-size:24.0pt;
@@ -1045,7 +1045,7 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif;color:#222222'>&nbsp;</sp
        visibility:visible;mso-wrap-style:square'>
        <v:imagedata src="index_files/image003.gif" o:title=""/>
       </v:shape><![endif]--><![if !vml]><img width=471 height=391
-      src="index_files/image003.gif" v:shapes="Picture_x0020_8"><![endif]></span></p>
+      src="image003.gif" v:shapes="Picture_x0020_8"><![endif]></span></p>
       </td>
       <td width=283 valign=top style='width:211.9pt;padding:0cm 5.4pt 0cm 5.4pt'>
       <p class=MsoNormal style='margin-bottom:0cm;line-height:14.65pt'><span
@@ -1054,7 +1054,7 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif;color:#222222'>&nbsp;</sp
        visibility:visible;mso-wrap-style:square'>
        <v:imagedata src="index_files/image004.gif" o:title=""/>
       </v:shape><![endif]--><![if !vml]><img width=466 height=465
-      src="index_files/image004.gif" v:shapes="Picture_x0020_7"><![endif]></span></p>
+      src="image004.gif" v:shapes="Picture_x0020_7"><![endif]></span></p>
       </td>
      </tr>
      <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
@@ -1065,7 +1065,7 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif;color:#222222'>&nbsp;</sp
        visibility:visible;mso-wrap-style:square'>
        <v:imagedata src="index_files/image005.gif" o:title=""/>
       </v:shape><![endif]--><![if !vml]><img width=460 height=376
-      src="index_files/image005.gif" v:shapes="Picture_x0020_6"><![endif]></span></p>
+      src="image005.gif" v:shapes="Picture_x0020_6"><![endif]></span></p>
       </td>
       <td width=283 valign=top style='width:211.9pt;padding:0cm 5.4pt 0cm 5.4pt'>
       <p class=MsoNormal style='margin-bottom:0cm;line-height:14.65pt'><span
@@ -1074,7 +1074,7 @@ style='font-size:12.0pt;font-family:"Arial",sans-serif;color:#222222'>&nbsp;</sp
        visibility:visible;mso-wrap-style:square'>
        <v:imagedata src="index_files/image006.gif" o:title=""/>
       </v:shape><![endif]--><![if !vml]><img width=467 height=382
-      src="index_files/image006.gif" v:shapes="Picture_x0020_5"><![endif]></span></p>
+      src="image006.gif" v:shapes="Picture_x0020_5"><![endif]></span></p>
       </td>
      </tr>
     </table>
@@ -1139,7 +1139,7 @@ code in <span class=SpellE>Javascript</span>.</span></b></p>
    visibility:visible;mso-wrap-style:square'>
    <v:imagedata src="index_files/image007.gif" o:title=""/>
   </v:shape><![endif]--><![if !vml]><img width=480 height=466
-  src="index_files/image007.gif" v:shapes="Picture_x0020_4"><![endif]></span></p>
+  src="image007.gif" v:shapes="Picture_x0020_4"><![endif]></span></p>
   </td>
   <td width=301 valign=top style='width:225.4pt;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
@@ -1148,7 +1148,7 @@ code in <span class=SpellE>Javascript</span>.</span></b></p>
    visibility:visible;mso-wrap-style:square'>
    <v:imagedata src="index_files/image008.gif" o:title=""/>
   </v:shape><![endif]--><![if !vml]><img width=477 height=450
-  src="index_files/image008.gif" v:shapes="Picture_x0020_3"><![endif]></span></p>
+  src="image008.gif" v:shapes="Picture_x0020_3"><![endif]></span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
@@ -1159,7 +1159,7 @@ code in <span class=SpellE>Javascript</span>.</span></b></p>
    visibility:visible;mso-wrap-style:square'>
    <v:imagedata src="index_files/image009.gif" o:title=""/>
   </v:shape><![endif]--><![if !vml]><img width=488 height=463
-  src="index_files/image009.gif" v:shapes="Picture_x0020_2"><![endif]></span></p>
+  src="image009.gif" v:shapes="Picture_x0020_2"><![endif]></span></p>
   </td>
   <td width=301 valign=top style='width:225.4pt;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;line-height:normal'><span
@@ -1168,7 +1168,7 @@ code in <span class=SpellE>Javascript</span>.</span></b></p>
    visibility:visible;mso-wrap-style:square'>
    <v:imagedata src="index_files/image010.gif" o:title=""/>
   </v:shape><![endif]--><![if !vml]><img width=473 height=457
-  src="index_files/image010.gif" v:shapes="Picture_x0020_1"><![endif]></span></p>
+  src="image010.gif" v:shapes="Picture_x0020_1"><![endif]></span></p>
   </td>
  </tr>
 </table>
